target_sources(SRB2SDL2 PRIVATE
	hyudoro.c
	gardentop.c
	shrink.c
	item-debris.c
	spb.c
	manta-ring.c
	orbinaut.c
	jawz.c
	duel-bomb.c
	broly.cpp
	ufo.c
	monitor.c
	item-spot.c
	loops.cpp
	drop-target.c
	ring-shooter.c
	audience.c
	random-item.c
	instawhip.c
	block.c
	gachabom-rebound.cpp
	servant-hand.c
	super-flicky.cpp
	battle-ufo.cpp
	powerup-aura.cpp
	ark-arrow.c
	dash-rings.c
	sneaker-panel.c
	emerald.c
	checkpoint.cpp
	rideroid.c
	bungee.c
	eggball.c
	dlzrocket.c
	dlzseasaw.c
	gpzseasaw.c
	dlzothers.c
	wpzturbine.c
	wpzothers.c
	shadow.cpp
	ball-switch.cpp
	charge.c
	mega-barrier.cpp
	frost-thrower.cpp
	ivoball.cpp
	crate.cpp
	spear.cpp
	fuel.cpp
	rocks.cpp
	emz-faucet.cpp
	trick-balloon.c
	cloud.c
	waterfall-particle.c
	sealed-star.c
	talk-point.cpp
	powerup-spinner.cpp
	adventure-air-booster.c
	destroyed-kart.cpp
	pulley.cpp
	amps.c
	ballhog.cpp
	bubble-shield.cpp
	flybot767.c
	lightning-shield.cpp
	flame-shield.cpp
	stone-shoe.cpp
	exp.c
	bail.c
	toxomister.cpp
	ancient-gear.c
	mushroom-hill-pole.c
)

add_subdirectory(versus)
